--- a/OwnersInfo.html
+++ b/OwnersInfo.html
@@ -80,42 +80,24 @@
                         <div class="row">
                             <!-- image part -->
                             <div class="col-lg-4 col-sm-12 ">
-                                <img class="img-fluid img-thumbnail rounded-circle my-auto mx-3 "src="images/priyo.jpg" alt="priyo">
+                                <img class="img-fluid img-thumbnail rounded-circle my-auto mx-3 "src="images/Billal.jpg" alt="priyo">
                             </div>
                             <!-- information part -->
                             <div class="col-lg-8 col-sm-12 p-5" style="text-align: left;">
-                                <p style="font-weight:bold; font-size:large;">Md.Raihan Karim Priyo</p>
+                                <p style="font-weight:bold; font-size:large;">Billal Ahmed Akash</p>
                                 <p style="font-weight:bold; font-size:large;">CEO & Founder,kinakata.com</p>
-                                <p>Md.Raihan Karim Priyo founded kinakata.com.For 5 years ,it is running successfully. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                     Mollitia sed numquam perferendis dolores molestiae in voluptatem excepturi quae labore quibusdam quia, doloribus, blanditiis reiciendis id omnis quasi voluptatibus nisi culpa!
+                                <p>Billal Ahmed Akash founded kinakata.com.For 5 years ,it is running successfully. 
                                 </p>
                                 <p ><span style="font-weight:bold; font-size:large;">Home Address:  </span>
-                               111, Arambagh,Motijheel,Dhaka-1000.</p>
-                                <p><span style="font-weight:bold; font-size:large;">Contact no:</span> 01953560879</p>
-                                <p><span style="font-weight:bold; font-size:large;">Email: </span> raihanpriyo473@gmail.com</p>
+                               111, Dania,Jattrabari,Dhaka-1000.</p>
+                                <p><span style="font-weight:bold; font-size:large;">Contact no:</span> 01998630384</p>
+                                <p><span style="font-weight:bold; font-size:large;">Email: </span>akashjnu26@gmail.com</p>
                             </div>
                         </div>
                         <hr style="border:5px solid aquamarine ; border-bottom: none;">
                         <hr style="border:5px solid aquamarine ; border-bottom: none;">
                         <!-- About Khairul -->
-                        <div class="row">
-                            <!-- image part -->
-                            <div class="col-lg-4 col-sm-12 ">
-                                <img class="img-fluid img-thumbnail rounded-circle my-auto mx-3 " src="images/Khairul.jpg" alt="khairul">
-                            </div>
-                            <!-- information part -->
-                            <div class="col-lg-8 col-sm-12 p-5" style="text-align: left;">
-                                <p style="font-weight:bold; font-size:large;">Khairul Islam Raju</p>
-                                <p style="font-weight:bold; font-size:large;">CEO & Founder,kinakata.com</p>
-                                <p>Khairul Islam Raju founded kinakata.com.For 5 years ,it is running successfully. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                     Mollitia sed numquam perferendis dolores molestiae in voluptatem excepturi quae labore quibusdam quia, doloribus, blanditiis reiciendis id omnis quasi voluptatibus nisi culpa!
-                                </p>
-                                <p ><span style="font-weight:bold; font-size:large;">Home Address:  </span>
-                                             bojrojogoni,Munshigonj.</p>
-                                <p><span style="font-weight:bold; font-size:large;">Contact no:</span> 01316883908</p>
-                                <p><span style="font-weight:bold; font-size:large;">Email: </span> khairulislamjnucse14@gmail.com</p>
-                            </div>
-                        </div>
+                        
                     </div>
                    
                 </div>
